crates/codex_cloud_agents/src/inbound/acp/snapshots/codex_cloud_agents__inbound__acp__test__completed_messages_do_not_duplicate_deltas.snap
---
source: crates/codex_cloud_agents/src/inbound/acp/test.rs
assertion_line: 34
expression: updates
---
[
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": "hello"
    }
  },
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": " world"
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": "thinking"
    }
  }
]
