crates/codex_cloud_agents/src/inbound/acp/snapshots/codex_cloud_agents__inbound__acp__test__completed_messages_ignore_unordered_deltas_and_repeated_completions.snap
---
source: crates/codex_cloud_agents/src/inbound/acp/test.rs
expression: updates
---
[
  {
    "sessionUpdate": "agent_message_chunk",
    "content": {
      "type": "text",
      "text": "hello world"
    }
  },
  {
    "sessionUpdate": "agent_thought_chunk",
    "content": {
      "type": "text",
      "text": "thinking"
    }
  }
]
